--- a/src/app/(app)/globals.css
+++ b/src/app/(app)/globals.css
@@ -19,3 +19,12 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+@font-face {
+  font-family: "PlaywriteUSModernGuides";
+  src: url("/fonts/PlaywriteUSModernGuides.woff2") format("woff2"),
+    url("/fonts/PlaywriteUSModernGuides.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
